src/styles/app.sass
@import url("https://use.typekit.net/xle6haa.css")
//DEFINE MEDIA QUERIES//
$breakpoints: ( 'small':  ( min-width:  100px ),'medium': ( min-width:  750px ),'large':  ( min-width: 1200px ))!default
@mixin respond-to($breakpoint) 
  // If the key exists in the map
  @if map-has-key($breakpoints, $breakpoint) 
    // Prints a media query based on the value
    @media #{inspect(map-get($breakpoints, $breakpoint))} 
      @content
    
  // If the key doesn't exist in the map
  @else 
    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. " + "Available breakpoints are: #{map-keys($breakpoints)}."
$colors: #592941, #498467, #52B788, #B2D3A8, #EDE5A6
$repeat: 4
//LOOP BACKGROUND COLORS
@for $i from 1 through $repeat 
  .container:nth-child(#{length($colors)}n+#{$i}) 
      background: nth($colors, $i)
.container
  height: 89vh
.anchor 
  display: block
  position: relative
  top: -12vh

.landing
  padding-top: 15vh
  position: relative

.projects
  height: auto
    
.avatar
  position: absolute
  bottom: 0
  @include respond-to('small')
      height: 40vh
  @include respond-to('medium')
      height: 40vh
App 
  text-align: center
  height: 5000px

.scrollTop, .scrollDown
  position: fixed
  width: 100%
  bottom: 20px
  align-items: center
  height: 20px
  z-index: 1000
  opacity: 0.5
  cursor: pointer
  justify-content: center
  animation: fadeIn 0.3s
  transition: opacity 0.4s
.scrollTop

.scrollTop:hover, .scrollDown:hover
  opacity: 1
.slogan
  font-family: lato, sans-serif
  font-style: normal
  font-weight: 200
  @include respond-to('small')
      font-size: 45px
  @include respond-to('medium')
      font-size: 60px
@keyframes fadeIn 
  0% 
    opacity: 0
  
  100% 
    opacity: 0.5
  

